--- a/GiftBird/Views/Shared/_Layout.cshtml
+++ b/GiftBird/Views/Shared/_Layout.cshtml
@@ -21,8 +21,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("NAN", "Index", "NTNP")</li>
-                    <li>@Html.ActionLink("GTG", "Index", "GtG")</li>
+                    <li>@Html.ActionLink("NAN", "Index", "NonProfits")</li>
+                    <li>@Html.ActionLink("GTG", "Index", "Donators")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
