Added in Facebook OAuth, Google OAuth & Part of 2 way authentication

--- a/GiftBird/Views/Shared/_LoginPartial.cshtml
+++ b/GiftBird/Views/Shared/_LoginPartial.cshtml
@@ -16,7 +16,32 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
+        @*MJN08082107326p.m. Created HTTPS and OAuth Authtentication for Facebook and Google, so I removed the register link.*@
         <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+        <li>
+        <script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '328135644263670',
+      xfbml      : true,
+      version    : 'v2.10'
+    });
+    FB.AppEvents.logPageView();
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+        </script>
+
+        <div class="fb-like"
+             data-share="true"
+             data-width="450"
+             data-show-faces="true">
+        </div></li>
     </ul>
 }
