--- a/GiftBird/Views/NonProfits/Create.cshtml
+++ b/GiftBird/Views/NonProfits/Create.cshtml
@@ -1,16 +1,16 @@
 ﻿@model GiftBird.Models.NonProfit
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Register your non profit with giftbird";
 }
 
-<h2>Create</h2>
+<h2>Please fill out all the fields below</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>NonProfit</h4>
         <hr />
@@ -30,7 +30,7 @@
                 @Html.ValidationMessageFor(model => model.NonProfitSite, "", new { @class = "text-danger" })
             </div>
         </div>
-		<!--
+		
         <div class="form-group">
             @Html.Label("Contact Name", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -62,7 +62,7 @@
                 @Html.ValidationMessageFor(model => model.State, "", new { @class = "text-danger" })
             </div>
         </div>
-		-->
+	
         <div class="form-group">
             @Html.Label("Zip Code", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -88,23 +88,38 @@
         </div>
 		
         <div class="form-group">
-            @Html.Label("Category Of Care", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CategoryOfCare, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CategoryOfCare, "", new { @class = "text-danger" })
-            </div>
+			@*@Html.DropDownListFor(m => m.CategoryOfCare, new SelectList(Model.CategoryOfCare), "--Select--")*@
+
+			@*@Html.Label("Catagories of Care", htmlAttributes: new { @class = "control-label col-md-2" })*@
+			<div class="col-md-10">
+				<form action="/action_page.php" method="post">
+					<select name="CategoryOfCare">
+						<option value="Arts, Culture & Humanities">Arts, Culture & Humanities</option>
+						<option value="Education & Research">Education & Research</option>
+						<option value="Environment & Animals">Environment & Animals</option>
+						<option value="Health">Health</option>
+						<option value="Human Services">Human Services</option>
+						<option value="Public & Societal Benefit">Public & Societal Benefit</option>
+						<option value="Religion">Religion</option>
+					</select>
+					<br><br>
+				</form>
+			</div>
+                @*@Html.EditorFor(model => model.CategoryOfCare, new { htmlAttributes = new { @class = "form-control" } })*@
+                @*@Html.ValidationMessageFor(model => model.CategoryOfCare, "", new { @class = "text-danger" })*@
+            
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" formaction="NanProfile" />
+                <input type="submit" value="Create" class="btn btn-default" @*formaction="NanProfile" formmethod="post"*@ />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "NanProfile")
+    @Html.ActionLink("Back to List", "index")
 </div>
 
 @section Scripts {
