--- a/GiftBird/Views/NonProfits/Create.cshtml
+++ b/GiftBird/Views/NonProfits/Create.cshtml
@@ -97,14 +97,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" formaction="NanProfile" />
+                <input type="submit" value="Create" class="btn btn-default" @*formaction="NanProfile"*@ />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "NanProfile")
+    @Html.ActionLink("Back to List", "Index")
 </div>
 
 @section Scripts {
