add reg user button

--- a/GiftBird/Views/Home/Index.cshtml
+++ b/GiftBird/Views/Home/Index.cshtml
@@ -12,6 +12,11 @@
     <p><a href="~/Donators/Create" class="btn btn-primary btn-lg">Create Your Registry Here &raquo;</a></p>
 </div>
 
+<div class="col-md-4">
+	<h2>Already Registered?</h2>
+	<p><a href="~/Views/Donators/DonProfile.cshtml" class="btn btn-default">Click Here &raquo;</a></p>
+</div>
+
 <div class="row">
     <div class="col-md-4">
         <h2>Non Profit?</h2>
