--- a/GiftBird/Views/Donators/DetailsPage.cshtml
+++ b/GiftBird/Views/Donators/DetailsPage.cshtml
@@ -1,17 +1,12 @@
-﻿@{
-    Layout = null;
+﻿@model GiftBird.Models.Donator
+
+@{
+    ViewBag.Title = "Details Page";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title></title>
-</head>
 <body>
     <div>
     
     </div>
 </body>
-</html>
+
