--- a/GiftBird/Views/Home/Index.cshtml
+++ b/GiftBird/Views/Home/Index.cshtml
@@ -7,10 +7,47 @@
 
 <div class="jumbotron">
 	<h1>giftbird</h1>
-	@*<p class="lead">
-	</p>
-	<p><a href="~/Donators/Create" class="btn btn-primary btn-lg">Create Your Registry Here &raquo;</a></p>*@
+	<div id="myCarousel" class="carousel slide" data-ride="carousel">
+		<!-- Indicators -->
+		<ol class="carousel-indicators">
+			<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+			<li data-target="#myCarousel" data-slide-to="1"></li>
+			<li data-target="#myCarousel" data-slide-to="2"></li>
+		</ol>
+
+		<!-- Wrapper for slides -->
+		<div class="carousel-inner">
+			<div class="item active">
+				<img src="https://www.givingtuesday.org/sites/default/files/2017-06/homepage3_0.jpg" alt="#GivingTuesday">
+			</div>
+
+			<div class="item">
+				<img src="https://ccwestmi.org/wp-content/uploads/2015/12/what-we-do-banner-1600x474.jpg" alt="Catholic Charities of West Michigan">
+			</div>
+
+			<div class="item">
+				<img src="https://static1.squarespace.com/static/57db041246c3c43af9dd6284/t/595fd76229687fe6a15881c4/1499453296482/?format=2500w" alt="Humane Society of West Michigan">
+			</div>
+		</div>
+
+		<!-- Left and right controls -->
+		<a class="left carousel-control" href="#myCarousel" data-slide="prev">
+			<span class="glyphicon glyphicon-chevron-left"></span>
+			<span class="sr-only">Previous</span>
+		</a>
+		<a class="right carousel-control" href="#myCarousel" data-slide="next">
+			<span class="glyphicon glyphicon-chevron-right"></span>
+			<span class="sr-only">Next</span>
+		</a>
+	</div>
 </div>
+
+@*<div class="jumbotron">
+	<h1>giftbird</h1>
+	<p class="lead">
+		</p>
+		<p><a href="~/Donators/Create" class="btn btn-primary btn-lg">Create Your Registry Here &raquo;</a></p>
+</div>*@
 
 <div class="col-md-4">
 	<h3><a href="~/Donators/Create">Step 1: Register as a Donator</a></h3>
@@ -24,7 +61,7 @@
 @*<div class="col-md-4">
 	<h2>Already Registered?</h2>
 	<p>@Html.ActionLink("Login", "LoginUser", "Donators", new { area = "" }, new { @class = "btn btn-default" })</p>
-</div>*@
+</div>
 
 @*<div class="row">
 	<div class="col-md-4">
