--- a/GiftBird/Views/Home/Index.cshtml
+++ b/GiftBird/Views/Home/Index.cshtml
@@ -17,10 +17,6 @@
 
 		<!-- Wrapper for slides -->
 		<div class="carousel-inner">
-			<div class="item active">
-				<img src="https://www.givingtuesday.org/sites/default/files/2017-06/homepage3_0.jpg" alt="#GivingTuesday">
-			</div>
-
 			<div class="item">
 				<img src="https://ccwestmi.org/wp-content/uploads/2015/12/what-we-do-banner-1600x474.jpg" alt="Catholic Charities of West Michigan">
 			</div>
@@ -28,6 +24,11 @@
 			<div class="item">
 				<img src="https://static1.squarespace.com/static/57db041246c3c43af9dd6284/t/595fd76229687fe6a15881c4/1499453296482/?format=2500w" alt="Humane Society of West Michigan">
 			</div>
+			<div class="item active">
+				<img src="https://www.givingtuesday.org/sites/default/files/2017-06/homepage3_0.jpg" alt="#GivingTuesday">
+			</div>
+
+			
 		</div>
 
 		<!-- Left and right controls -->
@@ -51,7 +52,7 @@
 
 <div class="col-md-4">
 	<h3><a href="~/Donators/Create">Step 1: Register as a Donator</a></h3>
-	<h3><a href="~/Donators/LoginUser">Step 2: Log in</a></h3>
+	<h3><a href="~/Donators/LoginUser2">Step 2: Log in</a></h3>
 	<h3><a href="~/Donators/SearchView">Step 3: Search</a></h3>
 	<h3><a href="~/Donators/DetailsPage">Step 4: Research, Save, & Send</a></h3>
 	
