--- a/GiftBird/Views/Shared/_LoginPartial.cshtml
+++ b/GiftBird/Views/Shared/_LoginPartial.cshtml
@@ -18,7 +18,7 @@ else
     <ul class="nav navbar-nav navbar-right">
         <li><a href="~/Home/About">About Us</a></li>
         <li><a href="~/Home/Contact">Contact Us</a></li>
-        <li><a href="~/Donators/LoginUser">Log in</a></li>
+        <li><a href="~/Donators/LoginUser2">Log in</a></li>
         @*<li>@Html.ActionLink("Login", "LoginUser", "Donators", new { area = "" }, new { @class = "btn btn-default" })</li>*@
         @*<li>@Html.ActionLink("Registry Look up", "Registry", "Account", routeValues: null, htmlAttributes: new { id = "tbd })</li>*@
         @*<li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>*@
