it is tuesday, my dudes

--- a/GiftBird/Views/Donators/DetailsPage.cshtml
+++ b/GiftBird/Views/Donators/DetailsPage.cshtml
@@ -6,7 +6,11 @@
 
 <body>
     <div>
-    
+        <p>@ViewBag.CurPass</p>
+        <p>@ViewBag.LoginPass</p>
+        <p>@ViewBag.Name</p>
+        <p>@ViewBag.Yay</p>
+        <p>@ViewBag.Okay</p>
     </div>
 </body>
 
