--- a/GiftBird/Views/Donators/LoginUser2.cshtml
+++ b/GiftBird/Views/Donators/LoginUser2.cshtml
@@ -16,7 +16,7 @@
             </div>
             <div>
                 @Html.Label("Password", new { style = "display:inline" })
-                @Html.EditorFor(model => model.password)
+                @Html.EditorFor(model => model.password , "Password")
             </div>
             <input type="submit" class="btn-custom" value="Submit" />
             @*@Html.ActionLink("Submit", "Login", "Donators")*@
