changes to detailspage and don cont

--- a/GiftBird/Views/Donators/Details.cshtml
+++ b/GiftBird/Views/Donators/Details.cshtml
@@ -89,7 +89,13 @@
         <dd>
             @Html.DisplayFor(model => model.Catagories)
         </dd>
+		<dt>
+			@Html.DisplayNameFor(model => model.Registry)
+		</dt>
 
+		<dd>
+			@Html.DisplayFor(model => model.Registry)
+		</dd>
     </dl>
 </div>
 <p>
