--- a/GiftBird/Views/Donators/DetailsPage.cshtml
+++ b/GiftBird/Views/Donators/DetailsPage.cshtml
@@ -18,6 +18,7 @@
         <p>@ViewBag.Message</p>
     </div>
     <h3>Here are your current charities selected for donation:</h3>
+	<p>@ViewBag.RegTest</p>
     <!--still need to populate the 3 charities that user selected from search page-->
 </body>
 
