--- a/GiftBird/Views/Donators/Edit.cshtml
+++ b/GiftBird/Views/Donators/Edit.cshtml
@@ -96,6 +96,13 @@
                 @Html.ValidationMessageFor(model => model.Catagories, "", new { @class = "text-danger" })
             </div>
         </div>
+		<div class="form-group">
+			@Html.LabelFor(model => model.Registry, htmlAttributes: new { @class = "control-label col-md-2" })
+			<div class="col-md-10">
+				@Html.EditorFor(model => model.Registry, new { htmlAttributes = new { @class = "form-control" } })
+				@Html.ValidationMessageFor(model => model.Registry, "", new { @class = "text-danger" })
+			</div>
+		</div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
