--- a/GiftBird/Views/Home/Contact.cshtml
+++ b/GiftBird/Views/Home/Contact.cshtml
@@ -1,17 +1,16 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
-
+<h1>giftbird</h1>
+<br />
+<br />
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+	Find us at:<br />
+	<br />
+	Grand Circus<br />
+    40 Pearl St. NW #200<br />
+    Grand Rapids, MI 49503<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    616-555-1212
 </address>
-
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+	www.Grandcircus.co<br />
