--- a/GiftBird/Views/Home/Contact.cshtml
+++ b/GiftBird/Views/Home/Contact.cshtml
@@ -1,16 +1,15 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+	ViewBag.Title = "Contact";
 }
-<h1>giftbird</h1>
-<br />
-<br />
+<h2>Contact Us</h2>
+<hr />
 <address>
-	Find us at:<br />
+	<h3>Find us at:</h3>
 	<br />
 	Grand Circus<br />
-    40 Pearl St. NW #200<br />
-    Grand Rapids, MI 49503<br />
-    <abbr title="Phone">P:</abbr>
-    616-555-1212
+	40 Pearl St. NW #200<br />
+	Grand Rapids, MI 49503<br />
+	<abbr title="Phone">P:</abbr>
+	616-555-1212
 </address>
 	www.Grandcircus.co<br />
