--- a/GiftBird/Views/Shared/_Layout.cshtml
+++ b/GiftBird/Views/Shared/_Layout.cshtml
@@ -22,7 +22,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Create a Donator Account", "Create", "Donators")</li>
-                    <li>@Html.ActionLink("Create a Non Profit Account", "Create", "NonProfits")</li>
+                    @*<li>@Html.ActionLink("Create a Non Profit Account", "Create", "NonProfits")</li>*@
+                    
                     <li>@Html.ActionLink("Search", "SearchView", "Donators")</li>
 
                     
@@ -33,6 +34,7 @@
     </div>
     <div class="container body-content">
         @RenderBody()
+    </div>
         <hr />
         <footer>
                 <p>&copy; @DateTime.Now.Year - giftbird inc.</p>
@@ -40,7 +42,7 @@
                 <p><a href="~/Home/Contact">Contact Us &raquo;</a></p>*@
 
         </footer>
-    </div>
+
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
