Styles cleaned up and errors working ish

--- a/GiftBird/Views/Donators/DetailsPage.cshtml
+++ b/GiftBird/Views/Donators/DetailsPage.cshtml
@@ -14,4 +14,4 @@
 	<!--still need to populate the 3 charities that user selected from search page-->
 </body>
 
-<h3> Want to add to your list? @Html.ActionLink("Search", "SearchView") </ h3 >
+<h3>@Html.ActionLink("Search", "SearchView") </ h3 >
