--- a/GiftBird/Views/Shared/_Layout.cshtml
+++ b/GiftBird/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                     <li>@Html.ActionLink("Create a Donator Account", "Create", "Donators")</li>
                     @*<li>@Html.ActionLink("Create a Non Profit Account", "Create", "NonProfits")</li>*@
                     
-                    <li>@Html.ActionLink("Search", "SearchView", "Donators")</li>
+                    @*<li>@Html.ActionLink("Search", "SearchView", "Donators")</li>*@
 
                     
                 </ul>
